<resources>
    <string name="app_name">Cool Weather APP</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="sea_level_pressure">Sea Level Pressure</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="update">UPDATE</string>
    <string name="pressure_value">%1$s hPa</string>
    <string name="wind_direction_value">%1$s°</string>
    <string name="wind_speed_value">%1$s km/h</string>
    <string name="temperature_value">%1$s °C</string>
    <string name="latitude_value">38.76</string>
    <string name="longitude_value">-9.12</string>
</resources>